[gd_scene load_steps=8 format=3 uid="uid://dg167mqm4kshd"]

[ext_resource type="PackedScene" uid="uid://ch35nc60niedd" path="res://scenes/Camera.tscn" id="1_fyqef"]
[ext_resource type="Script" uid="uid://db3uhm458p526" path="res://scripts/main_controller.gd" id="2_27fn8"]
[ext_resource type="Script" uid="uid://j4o6xmftw8jx" path="res://world_stats.gd" id="2_ibotj"]
[ext_resource type="Script" uid="uid://d0c7txwu2iaif" path="res://city_name.gd" id="2_nltto"]
[ext_resource type="Script" uid="uid://djeqtwi8b65cc" path="res://virus_info.gd" id="3_n5ude"]
[ext_resource type="Script" uid="uid://of6iyhs87u5a" path="res://scenes/graph_main.gd" id="3_nltto"]
[ext_resource type="Texture2D" uid="uid://b00rpw0wmd7d" path="res://scenes/virus.png" id="4_y4yjw"]

[node name="UI" type="Node3D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="SubViewportContainer" parent="Control"]
layout_mode = 0
offset_left = 559.0
offset_top = 47.5
offset_right = 1109.0
offset_bottom = 597.5

[node name="SubViewport" type="SubViewport" parent="Control/PanelContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(550, 550)
render_target_update_mode = 4

[node name="Main_Scene" parent="Control/PanelContainer/SubViewport" instance=ExtResource("1_fyqef")]

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 576.0
offset_top = 437.0
offset_right = 776.0
offset_bottom = 473.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PanelContainer2"]
layout_mode = 2
text = "World stats 
"

[node name="PanelContainer3" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 573.0
offset_top = 483.0
offset_right = 773.0
offset_bottom = 583.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PanelContainer3"]
layout_mode = 2
text = "Population:  100m
Susceptable:  200k 
Infected: 100k 
Recovered: 200k"
script = ExtResource("2_ibotj")

[node name="PanelContainer4" type="PanelContainer" parent="Control"]
self_modulate = Color(0.231373, 0.231373, 0.231373, 0)
layout_mode = 0
offset_left = 53.0
offset_top = 53.0
offset_right = 148.0
offset_bottom = 83.0
scale = Vector2(2, 2)

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PanelContainer4"]
layout_mode = 2
text = "Maldemic"

[node name="Virus_Info" type="PanelContainer" parent="Control"]
self_modulate = Color(0.237539, 0.237539, 0.237539, 1)
layout_mode = 0
offset_left = 59.0
offset_top = 410.0
offset_right = 509.0
offset_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Virus_Info"]
layout_mode = 2
text = "Virus:
Transmission Rate :
Infection Rate: 
Recovery Rate: 
Lethality: 	
Mutation Rate:"
script = ExtResource("3_n5ude")

[node name="Virus" type="Sprite2D" parent="Control"]
position = Vector2(434, 500)
scale = Vector2(0.199517, 0.2)
texture = ExtResource("4_y4yjw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer5" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(0.0430392, 0.0430392, 0.0430392, 1)
offset_left = 382.0
offset_top = 336.0
offset_right = 507.0
offset_bottom = 396.0

[node name="Day Back" type="Button" parent="CanvasLayer/PanelContainer5"]
layout_mode = 2
text = "Back
"

[node name="PanelContainer6" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(0.0430392, 0.0430392, 0.0430392, 1)
offset_left = 382.0
offset_top = 192.0
offset_right = 507.0
offset_bottom = 252.0

[node name="Run_Stop" type="Button" parent="CanvasLayer/PanelContainer6"]
layout_mode = 2
text = "Run/Stop"

[node name="PanelContainer3" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(0.114897, 0.114897, 0.114897, 1)
offset_left = 379.0
offset_top = 265.0
offset_right = 504.0
offset_bottom = 325.0

[node name="Day Add" type="Button" parent="CanvasLayer/PanelContainer3"]
layout_mode = 2
text = "Forward"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
texture_filter = 1
offset_left = 477.0
offset_top = 115.0
offset_right = 517.0
offset_bottom = 150.0
scale = Vector2(1.5, 1.5)
text = "SF"
script = ExtResource("2_nltto")

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
texture_filter = 1
offset_left = 417.0
offset_top = 114.0
offset_right = 457.0
offset_bottom = 149.0
scale = Vector2(1.5, 1.5)
text = "City:"

[node name="Day Counter" type="RichTextLabel" parent="CanvasLayer"]
texture_filter = 2
offset_left = 374.0
offset_top = 52.0
offset_right = 474.0
offset_bottom = 82.0
scale = Vector2(2, 2)
text = "Day: 0"

[node name="Main_Controller" type="Node2D" parent="CanvasLayer"]
position = Vector2(4, 0)
script = ExtResource("2_27fn8")

[node name="Graph" type="Node2D" parent="CanvasLayer"]
position = Vector2(53, 111)
script = ExtResource("3_nltto")

[connection signal="button_down" from="CanvasLayer/PanelContainer5/Day Back" to="CanvasLayer/Main_Controller" method="_on_day_back_button_down"]
[connection signal="button_down" from="CanvasLayer/PanelContainer6/Run_Stop" to="CanvasLayer/Main_Controller" method="_on_run_stop_button_down"]
[connection signal="button_down" from="CanvasLayer/PanelContainer3/Day Add" to="CanvasLayer/Main_Controller" method="_on_day_add_button_down"]
